test/fails/bad_types/mat_decl2.lgl
void main() {
    mat1x2 m = [2.3, 2.1];
    print m;
}